--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                     <li><a href="#mitologias">Mitologias</a></li>
                     <li><a href="#programacao">Programação</a></li>
                     <li><a href="#contato">Contato</a></li>
-                    <li><a href="inscricao.html">Inscrição</a></li> </ul>
             </nav>
         </div>
     </header>
@@ -28,7 +27,6 @@
             <div class="container">
                 <h2>UMA JORNADA PELAS MITOLOGIAS</h2>
                 <p>Prepare-se para desvendar os segredos de diversas culturas!</p>
-                <img src="placeholder_lampada_mitologia.png" alt="Lâmpada com mitologias" class="lampada-icone">
             </div>
         </section>
 
@@ -94,8 +92,17 @@
                 <h3>Programação - Calendário dos Desafios</h3>
                 <div class="programacao-grid">
                     <div class="periodo-card">
-                        <h4>16/06 - 20/06</h4>
-                        <p><strong>Fase de Conhecimento:</strong> Quizzes e Desafios teóricos sobre as mitologias.</p>
+                        <h4>23/06 - 27/06</h4>
+                        <p><strong>Ensino Fundamental II (6° e 7° anos)</strong></p>
+                        <ul>
+                            <li><p>Atividade 1: Criação de Contos Mitológicos</p></li>
+                            <li><p>Atividade 2: Peça Teatral</p></li>
+                            <li><p>Atividade 3: Galeria de Arte Mitológica</p></li>
+                        </ul>
+                    </div>
+                    <div class="periodo-card">
+                        <h4>23/06 - 27/06</h4>
+                        <p><strong>Ensino Fundamental II (8° e 9° anos)</strong></p>
                         <ul>
                             <li><p>Atividade 1: Quiz Mitológico</p></li>
                             <li><p>Atividade 2: Caça ao Tesouro Virtual</p></li>
@@ -104,7 +111,7 @@
                     </div>
                     <div class="periodo-card">
                         <h4>23/06 - 27/06</h4>
-                        <p><strong>Fase de Criação:</strong> Desenvolvimento de projetos e apresentações artísticas.</p>
+                        <p><strong>Ensino Médio</strong></p>
                         <ul>
                             <li><p>Atividade 1: Criação de Contos Mitológicos</p></li>
                             <li><p>Atividade 2: Peça Teatral</p></li>
@@ -120,10 +127,9 @@
             <div class="container">
                 <h3>Fale Conosco</h3>
                 <p>Tem alguma dúvida ou sugestão? Entre em contato!</p>
-                <p>Email: <a href="mailto:interclasse2025@escola.com">interclasse2025@escola.com</a></p>
+                <p>Email: <a href="mailto:interclasse2025@escola.com">email@teste.com</a></p>
                 <p>Siga-nos nas redes sociais:</p>
                 <div class="social-links">
-                    <a href="#" target="_blank">Facebook</a>
                     <a href="#" target="_blank">Instagram</a>
                 </div>
             </div>
@@ -132,7 +138,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Interclasse. Todos os direitos reservados. Design por [Seu Nome/Nome da Equipe]</p>
+            <p>&copy; 2025 Interclasse. Todos os direitos reservados.</p>
         </div>
     </footer>
 
